--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -112,4 +112,28 @@ language={English}
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyZSBEGF13},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+@article{DBLP:journals/corr/KingmaB14,
+  author    = {Diederik P. Kingma and
+               Jimmy Ba},
+  title     = {Adam: {A} Method for Stochastic Optimization},
+  journal   = {CoRR},
+  volume    = {abs/1412.6980},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.6980},
+  timestamp = {Thu, 01 Jan 2015 19:51:08 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KingmaB14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@MISC{Bastien-Theano-2012,
+        author = {Bastien, Fr{\'{e}}d{\'{e}}ric and Lamblin, Pascal and Pascanu, Razvan and Bergstra, James and Goodfellow, Ian J. and Bergeron, Arnaud and Bouchard, Nicolas and Bengio, Yoshua},
+         title = {Theano: new features and speed improvements},
+          year = {2012},
+  howpublished = {Deep Learning and Unsupervised Feature Learning NIPS 2012 Workshop},
+      abstract = {Theano is a linear algebra compiler that optimizes a user’s symbolically-speciﬁed
+mathematical computations to produce efﬁcient low-level implementations. In
+this paper, we present new features and efﬁciency improvements to Theano, and
+benchmarks demonstrating Theano’s performance relative to Torch7, a recently
+introduced machine learning library, and to RNNLM, a C++ library targeted at
+recurrent neural networks.}
+}
 
