--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -136,4 +136,17 @@ benchmarks demonstrating Theano’s performance relative to Torch7, a recently
 introduced machine learning library, and to RNNLM, a C++ library targeted at
 recurrent neural networks.}
 }
+@article{DBLP:journals/corr/GoodfellowSS14,
+  author    = {Ian J. Goodfellow and
+               Jonathon Shlens and
+               Christian Szegedy},
+  title     = {Explaining and Harnessing Adversarial Examples},
+  journal   = {CoRR},
+  volume    = {abs/1412.6572},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.6572},
+  timestamp = {Thu, 01 Jan 2015 19:51:08 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GoodfellowSS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
